--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,7 @@
     <div class="content">
       {{ content }}
 	    <footer>
-	    Copyright &copy; 2019 proneon267
+	    Copyright &copy; 2019 Molpa
 	    </footer>
     </div>
   </body>
