--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,7 @@
       }
 
       .sidebar a:hover:not(.active) {
-        background-color: #555;
-        color: white;
+        color: #555;
       }
 
       div.content {
