--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,15 +33,9 @@
         text-decoration: none;
       }
 
-      .sidebar a.active {
-        background-color: #4CAF50;
-        color: white;
-      }
-
-      .sidebar a:hover:not(.active) {
+      .sidebar a:hover {
         color: #555;
       }
-
       div.content {
         margin-left: 200px;
         padding: 1px 25px;
