--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,6 @@
 	    dt {
 		    font-weight: bold;
 	    }
-	#home {
-             background-color:#1E90FF;
-             color: white; 
-         }
       .sidebar {
         margin: 0;
         padding: 0;
@@ -34,7 +30,7 @@
       }
 
       .sidebar a:hover {
-        color: #555;
+        color: #1E90FF;
       }
       div.content {
         margin-left: 200px;
