--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,9 +100,9 @@
   <body>
 
     <div id="mybar" class="sidebar">
-      <a id="home" href="https://proneon267.github.io/">ପ୍ରୋ.ନି.୨୬୭</a>
+      <a id="home" href="https://proneon267.github.io/">ମୋଲପା</a>
       <a id="blog" class=" {{ page.blogstatus }} " href="https://proneon267.github.io/blog/">TimeLine</a>
-      <a id="contact" class=" {{ page.contactstatus }} " href="https://proneon267.github.io/contact/">Contact</a>
+      <a id="contact" class=" {{ page.contactstatus }} " href="https://proneon267.github.io/contact/">About</a>
       <a id="more" class=" {{ page.morestatus }} " href="https://proneon267.github.io/more/">More</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i>&#9776;</i>
@@ -112,7 +112,7 @@
     <div class="content">
       {{ content }}
 	    <footer>
-	    Copyright &copy; 2019 proneon267
+	    Copyright &copy; 2019 molpa
 	    </footer>
     </div>
   </body>
