--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,10 +100,10 @@
   <body>
 
     <div id="mybar" class="sidebar">
-      <a id="home" href="https://proneon267.github.io/">ମୋଲପା</a>
-      <a id="blog" class=" {{ page.blogstatus }} " href="https://proneon267.github.io/blog/">TimeLine</a>
-      <a id="contact" class=" {{ page.contactstatus }} " href="https://proneon267.github.io/contact/">About</a>
-      <a id="more" class=" {{ page.morestatus }} " href="https://proneon267.github.io/more/">More</a>
+      <a id="home" href="https://molpa.github.io/">ମୋଲପା</a>
+      <a id="blog" class=" {{ page.blogstatus }} " href="https://molpa.github.io/blog/">TimeLine</a>
+      <a id="contact" class=" {{ page.contactstatus }} " href="https://molpa.github.io/contact/">About</a>
+      <a id="more" class=" {{ page.morestatus }} " href="https://molpa.github.io/more/">More</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i>&#9776;</i>
   </a>
