--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         color: white;
       }
       .sidebar a:hover:not(.active) {
-        background-color: #555;
+        background-color: rgb(0, 42, 135);
         color: white;
       }
       div.content {
@@ -112,6 +112,7 @@
     <div class="content">
       {{ content }}
 	    <footer>
+		    <br>
 	    Copyright &copy; 2019 molpa
 	    </footer>
     </div>
