--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,18 @@
              background-color:#1E90FF;
              color: white; 
          }
+	#blog {
+		background-color:yellow;
+		color: white;
+	    }
+	#contact {
+		background-color: red;
+		color: white;
+	    }
+	#more {
+		background-color: green;
+		color:white;
+	    }
       .sidebar {
         margin: 0;
         padding: 0;
@@ -31,14 +43,6 @@
         color: black;
         padding: 16px;
         text-decoration: none;
-      }
-      .sidebar a.active {
-        background-color: #4CAF50;
-        color: white;
-      }
-      .sidebar a:hover:not(.active) {
-        background-color: rgb(0, 42, 135);
-        color: white;
       }
       div.content {
         margin-left: 200px;
