--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,19 +13,19 @@
 		    font-weight: bold;
 	    }
 	#home {
-             background-color:#1E90FF;
+             background-color: #1E90FF;
              color: white; 
          }
 	#blog {
-		background-color:yellow;
+		background-color: #CBA100;
 		color: white;
 	    }
 	#contact {
-		background-color: red;
+		background-color: #B92D2E;
 		color: white;
 	    }
 	#more {
-		background-color: green;
+		background-color: #35AC01;
 		color:white;
 	    }
       .sidebar {
