--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,20 +12,20 @@
 	    dt {
 		    font-weight: bold;
 	    }
-	#home {
-             background-color: #1E90FF;
+	#home:hover {
+             background-color: linear-gradient(right, #36d1dc, #5b86e5);
              color: white; 
          }
-	#blog {
-		background-color: #CBA100;
+	#blog:hover {
+		background-color: linear-gradient(right, #de6262, #ffb88c);
 		color: white;
 	    }
-	#contact {
-		background-color: #B92D2E;
+	#contact:hover {
+		background-color: linear-gradient(right, #ffd89b, #19547b);
 		color: white;
 	    }
-	#more {
-		background-color: #35AC01;
+	#more:hover {
+		background-color: linear-gradient(right, #56ab2f, #a8e063);
 		color:white;
 	    }
       .sidebar {
