--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,19 +13,19 @@
 		    font-weight: bold;
 	    }
 	#home:hover {
-             background-color: linear-gradient(right, #36d1dc, #5b86e5);
+             background-image: linear-gradient(right, #36d1dc, #5b86e5);
              color: white; 
          }
 	#blog:hover {
-		background-color: linear-gradient(right, #de6262, #ffb88c);
+		background-image: linear-gradient(right, #de6262, #ffb88c);
 		color: white;
 	    }
 	#contact:hover {
-		background-color: linear-gradient(right, #ffd89b, #19547b);
+		background-image: linear-gradient(right, #ffd89b, #19547b);
 		color: white;
 	    }
 	#more:hover {
-		background-color: linear-gradient(right, #56ab2f, #a8e063);
+		background-image: linear-gradient(right, #56ab2f, #a8e063);
 		color:white;
 	    }
       .sidebar {
