--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
         position: fixed;
         height: 100%;
         overflow: auto;
-	font-size: 20px;
+	font-size: 1.125rem;
       }
       .sidebar a {
         display: block;
