--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         margin: 0;
         padding: 0;
         width: 200px;
-        background-color: #f1f1f1;
+        background-color: linear-gradient(right, #36d1dc, #5b86e5);
         position: fixed;
         height: 100%;
         overflow: auto;
