--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         margin: 0;
         padding: 0;
         width: 200px;
-        background-image: linear-gradient(right, #36d1dc, #5b86e5);
+        background-image: linear-gradient(to right, #36d1dc, #5b86e5);
         position: fixed;
         height: 100%;
         overflow: auto;
