--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,22 @@
 	    dt {
 		    font-weight: bold;
 	    }
+	    #home{
+	            background-image: linear-gradient(to right, #36d1dc, #5b86e5);
+	    }
+	    #blog{
+	            background-image: linear-gradient(to right, #FF512F, #DD2476);
+	    }
+	    #contact{
+	            background-image: linear-gradient(to right, #ffe259, #ffa751);
+	    }
+	    #more{
+		    background-image: linear-gradient(to right, #348F50, #56B4D3);
+	    }
       .sidebar {
         margin: 0;
         padding: 0;
         width: 200px;
-        background-image: linear-gradient(to right, #36d1dc, #5b86e5);
         position: fixed;
         height: 100%;
         overflow: auto;
