--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
         margin: 0;
         padding: 0;
         width: 200px;
+	background-image: linear-gradient(to right, #FFEFBA, #FFFFFF);
         position: fixed;
         height: 100%;
         overflow: auto;
