--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,23 +12,23 @@
 	    dt {
 		    font-weight: bold;
 	    }
-	    #home{
+	    #home:hover{
 	            background-image: linear-gradient(to right, #36d1dc, #5b86e5);
 	    }
-	    #blog{
+	    #blog:hover{
 	            background-image: linear-gradient(to right, #FF512F, #DD2476);
 	    }
-	    #contact{
+	    #contact:hover{
 	            background-image: linear-gradient(to right, #ffe259, #ffa751);
 	    }
-	    #more{
+	    #more:hover{
 		    background-image: linear-gradient(to right, #348F50, #56B4D3);
 	    }
       .sidebar {
         margin: 0;
         padding: 0;
         width: 200px;
-	background-image: linear-gradient(to right, #FFEFBA, #FFFFFF);
+	background-image: linear-gradient(to right, #FFAFBD, #ffc3a0);
         position: fixed;
         height: 100%;
         overflow: auto;
