--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,17 +12,33 @@
 	    dt {
 		    font-weight: bold;
 	    }
+	    #home{
+		   color: #36d1dc;
+	    }
+	    #blog{
+		    color:#FF512F;
+	    }
+	    #contact{
+		   color:#ffe259;
+	    }
+	    #more{
+		   color:#348F50;
+	    }
 	    #home:hover{
 	            background-image: linear-gradient(to right, #36d1dc, #5b86e5);
+		    color:black;
 	    }
 	    #blog:hover{
 	            background-image: linear-gradient(to right, #FF512F, #DD2476);
+		    color:black;
 	    }
 	    #contact:hover{
 	            background-image: linear-gradient(to right, #ffe259, #ffa751);
+		    color:black;
 	    }
 	    #more:hover{
 		    background-image: linear-gradient(to right, #348F50, #56B4D3);
+		    color:black;
 	    }
       .sidebar {
         margin: 0;
