--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,16 +13,16 @@
 		    font-weight: bold;
 	    }
 	    #home{
-		   color: #36d1dc;
+		   color: #5b86e5;
 	    }
 	    #blog{
-		    color:#FF512F;
+		    color:#DD2476;
 	    }
 	    #contact{
-		   color:#ffe259;
+		   color:#ffa751;
 	    }
 	    #more{
-		   color:#348F50;
+		   color:#56B4D3;
 	    }
 	    #home:hover{
 	            background-image: linear-gradient(to right, #36d1dc, #5b86e5);
