--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
         margin: 0;
         padding: 0;
         width: 200px;
-	background-image: linear-gradient(to right, #FFAFBD, #ffc3a0);
+	background:#100e17;
         position: fixed;
         height: 100%;
         overflow: auto;
