--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       }
       .sidebar a {
         display: block;
-        color: black;
+        color: white;
         padding: 16px;
         text-decoration: none;
       }
