--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,10 @@
 		    background-image: linear-gradient(to right, #348F50, #56B4D3);
 		    color:black;
 	    }
+	    .h{background-image: linear-gradient(to right, #36d1dc, #5b86e5); color:black;}
+	    .b{background-image: linear-gradient(to right, #FF512F, #DD2476); color:black;}
+	    .c{background-image: linear-gradient(to right, #ffe259, #ffa751); color:black;}
+	    .m{background-image: linear-gradient(to right, #348F50, #56B4D3); color:black;}
       .sidebar {
         margin: 0;
         padding: 0;
