--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,7 +109,7 @@
   <body>
 
     <div id="mybar" class="sidebar">
-      <a id="home" href="https://molpa.github.io/">ମୋଲପା</a>
+      <a id="home" class =" {{ page.homestatus }} " href="https://molpa.github.io/">ମୋଲପା</a>
       <a id="blog" class=" {{ page.blogstatus }} " href="https://molpa.github.io/blog/">TimeLine</a>
       <a id="contact" class=" {{ page.contactstatus }} " href="https://molpa.github.io/contact/">About</a>
       <a id="more" class=" {{ page.morestatus }} " href="https://molpa.github.io/more/">More</a>
