--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 	    #home:hover{
 	            background-image: linear-gradient(to right, #36d1dc, #5b86e5);
 		    color:black;
+		    font-weight: bold;
 	    }
 	    #blog:hover{
 	            background-image: linear-gradient(to right, #FF512F, #DD2476);
@@ -29,7 +30,7 @@
 		    background-image: linear-gradient(to right, #348F50, #56B4D3);
 		    color:black;
 	    }
-	    .h{background-image: linear-gradient(to right, #36d1dc, #5b86e5); color:black;}
+	    .h{background-image: linear-gradient(to right, #36d1dc, #5b86e5); color:black;font-weight: bold;}
 	    .b{background-image: linear-gradient(to right, #FF512F, #DD2476); color:black;}
 	    .c{background-image: linear-gradient(to right, #ffe259, #ffa751); color:black;}
 	    .m{background-image: linear-gradient(to right, #348F50, #56B4D3); color:black;}
@@ -93,6 +94,7 @@
 		    .latest {
 			    width: 100%;
 		    }
+		    #home{background-image: linear-gradient(to right, #36d1dc, #5b86e5); color:white;font-weight: bold;}
 	    }
     </style>
 	<script>
