--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,10 @@
 	    dt {
 		    font-weight: bold;
 	    }
-	    
+	    #home{font-weight: bold;}
+	    #blog{font-weight: bold;}
+	    #contact{font-weight: bold;}
+	    #about{font-weight: bold;}
 	    #home:hover{
 	            background-image: linear-gradient(to right, #36d1dc, #5b86e5);
 		    color:black;
@@ -94,7 +97,7 @@
 		    .latest {
 			    width: 100%;
 		    }
-		    #home{background-image: linear-gradient(to right, #36d1dc, #5b86e5); color:white;font-weight: bold;}
+		    #home{background-image: linear-gradient(to right, #36d1dc, #5b86e5); color:white;}
 	    }
     </style>
 	<script>
