--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 	    #home{font-weight: bold;}
 	    #blog{font-weight: bold;}
 	    #contact{font-weight: bold;}
-	    #about{font-weight: bold;}
+	    #more{font-weight: bold;}
 	    #home:hover{
 	            background-image: linear-gradient(to right, #36d1dc, #5b86e5);
 		    color:black;
