--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
         position: fixed;
         height: 100%;
         overflow: auto;
-	font-size: 1.125rem;
+	font-size: 20px;
       }
       .sidebar a {
         display: block;
