--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
         font-family: "Roboto",sans-serif;
 	font-size: 20px;
       }
+	    img {	width:600px;
+	    }
 	    dt {
 		    font-weight: bold;
 	    }
