--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
         font-family: "Roboto",sans-serif;
 	font-size: 20px;
       }
-	    img {	width:600px;
+	    img {	max-width: 100%;
+  			height: auto;
 	    }
 	    dt {
 		    font-weight: bold;
