--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
         font-family: "Roboto",sans-serif;
 	font-size: 20px;
       }
-	    img {	max-width: 100%;
-  			height: auto;
+	    img {	width: 600px;
+		    	height: auto;
 		    	align:middle;
 	    }
 	    dt {
@@ -102,6 +102,10 @@
 			    width: 100%;
 		    }
 		    #home{background-image: linear-gradient(to right, #36d1dc, #5b86e5); color:white;}
+	    }
+	    		img {
+				max-width: 100%;
+  				height: auto;
 	    }
     </style>
 	<script>
